--- a/AboutUs/AboutUs.Css
+++ b/AboutUs/AboutUs.Css
@@ -8,6 +8,24 @@
   font-style: normal;
 }
 
+:root {
+  --base-color: white;
+  --base-variant: #e8e9ed;
+  --text-color: #111528;
+  --secondary-tex: #232738;
+  --primary-color: #3a435d;
+  --accent-color: #0071ff;
+}
+
+.darkmode {
+  --base-color: #0e1111;
+  --base-variant: #0e1111;
+  --text-color: #ffffff;
+  --secondary-text: #a4a5b8;
+  --post-btn-bg: white;
+  --post-btn-color: black;
+}
+
 body {
   background-image: url(Griders.png);
   background-repeat: no-repeat;
@@ -19,6 +37,16 @@ body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  color: var(--text-color);
+}
+
+.navigation a {
+  padding: 1em;
+}
+
+.navigation a i {
+  color: var(--secondary-text);
+
 }
 
 .containerbox {
@@ -28,7 +56,7 @@ body {
   border: 1px solid #ccc;
   border-radius: 8px;
   overflow: hidden;
-  background-color: #f9f9f9;
+  background-color: var(--base-color);
   width: 100%;
   max-width: 1300px;
   height: calc(100vh - 60px);
@@ -70,110 +98,22 @@ body {
   color: white;
 }
 
-.heading h1 {
-  font-size: 28px;
-  color: #000;
-  margin-bottom: 5px;
-}
+
 
 .heading p {
-  font-size: 16px;
   color: #666;
-  margin: 0 10px;
   width: 90%;
-}
-
-.container {
-  width: 100%;
-  margin: 0 auto;
-  padding: 10px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .about {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  max-width: 90%;
+  align-items: center;
+  flex-direction: column;
   text-align: center;
 }
 
-.about h2 {
-  font-size: 28px;
-  color: #000000;
-  margin-bottom: 10px;
-}
-
 .about p {
+  width: 90%;
   color: #666;
-  font-size: 16px;
-  margin: 0 10px;
-}
-
-.about .readmore {
-  display: inline-block;
-  padding: 8px 16px;
-  background-color: #d6d6d6;
-  color: #000000;
-  font-size: 16px;
-  text-decoration: none;
-  border-radius: 25px;
-  margin-top: 10px;
-  transition: 0.3s ease;
-}
-
-.about .readmore:hover {
-  background-image: linear-gradient(
-    to right,
-    red,
-    orange,
-    yellow,
-    green,
-    blue,
-    indigo,
-    violet
-  );
-  color: rgb(255, 255, 255);
-}
-
-@media only screen and (max-width: 768px) {
-  .containerbox {
-    width: 100%;
-    height: auto;
-    padding: 15px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    box-shadow: none;
-  }
-
-  .heading h1 {
-    font-size: 24px;
-  }
-
-  .heading p {
-    font-size: 14px;
-  }
-
-  .about {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .about h2 {
-    font-size: 24px;
-  }
-
-  .about p {
-    font-size: 14px;
-  }
-
-  .about .readmore {
-    font-size: 14px;
-    padding: 6px 12px;
-  }
 }
