--- a/Calendar/Calendar.css
+++ b/Calendar/Calendar.css
@@ -14,6 +14,15 @@ body {
   background-image: url(Griders.png);
 }
 
+:root {
+  --base-color: white;
+  --base-variant: #e8e9ed;
+  --text-color: #111528;
+  --secondary-tex: #232738;
+  --primary-color: #3a435d;
+  --accent-color: #0071ff;
+}
+
 .darkmode {
   --base-color: #0e1111;
   --base-variant: #0e1111;
@@ -60,7 +69,8 @@ body {
   height: 80%;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
   position: relative;
-  overflow: hidden; /* Prevent overflow */
+  overflow: hidden;
+  /* Prevent overflow */
 }
 
 #controls {
@@ -95,15 +105,19 @@ button:hover {
 #calendar {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-auto-rows: 1fr; /* Ensure rows fit within available height */
-  gap: 10px; /* Reduced gap for a tighter fit */
+  grid-auto-rows: 1fr;
+  /* Ensure rows fit within available height */
+  gap: 10px;
+  /* Reduced gap for a tighter fit */
   flex-grow: 1;
-  padding: 10px; /* Add padding for aesthetics */
-  overflow: auto; /* Allow scrolling if content exceeds height */
+  padding: 10px;
+  /* Add padding for aesthetics */
+  overflow: auto;
+  /* Allow scrolling if content exceeds height */
 }
 
 .day {
-  background-color: #e9ecef;
+  background-color: var(--base-color);
   border: 1px solid #ddd;
   border-radius: 4px;
   display: flex;
@@ -113,7 +127,8 @@ button:hover {
   padding: 10px;
   text-align: center;
   position: relative;
-  height: 80px; /* Adjust height to fit nicely */
+  height: 80px;
+  /* Adjust height to fit nicely */
 }
 
 .day:hover {
@@ -137,31 +152,10 @@ button:hover {
   visibility: hidden;
 }
 
-.home-button {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 20px;
-  color: #000000;
-  transition: all 0.3s ease;
-}
 
-.home-button i {
-  font-size: 28px;
-  transition: color 0.3s, background-color 0.3s, border-radius 0.3s;
-  color: rgb(0, 0, 0);
-  padding: 10px;
-  border-radius: 50%; /* Make the icon circular */
-}
 
-.home-button i:hover {
-  background-color: black;
-  color: white;
-  border-radius: 50%; /* Keep it circular on hover */
-}
+
+
 
 .emoji-large {
   font-size: 2em;
